Fix some layout issues

--- a/app/assets/stylesheets/partials/_search_filters.scss
+++ b/app/assets/stylesheets/partials/_search_filters.scss
@@ -15,37 +15,41 @@
     list-style-type: none;
   }
 
+  label {
+    display: block;
+  }
+
   .search_fform_dd {
-    width: 30%;
+//    width: 30%;
   }
 
   .search_fform_ti {
-    width: 30%;
+//    width: 30%;
   }
 
-  #search_fcat {
-    margin-left: 75px;
-  }
-
-  #search_fdiet {
-    margin-left: 8px;
-  }
-
-  #search_fdif {
-    margin-left: 87px;
-  }
-
-  #search_fctime {
-    margin-left: 65px;
-  }
-
-  #search_fserves {
-    margin-left: 100px;
-  }
-
-  #search_fcontains {
-    margin-left: 87px;
-  }
+//  #search_fcat {
+//    margin-left: 75px;
+//  }
+//
+//  #search_fdiet {
+//    margin-left: 8px;
+//  }
+//
+//  #search_fdif {
+//    margin-left: 87px;
+//  }
+//
+//  #search_fctime {
+//    margin-left: 65px;
+//  }
+//
+//  #search_fserves {
+//    margin-left: 100px;
+//  }
+//
+//  #search_fcontains {
+//    margin-left: 87px;
+//  }
 
   #search_fform_submit {
     width: 50%;
